Updated: AssistantSetup now part of /config, partial new swagger documentation
